clusters/homelab/rundeck/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rundeck-redirect
  namespace: rundeck
spec:
  parentRefs:
  - name: homelab
    namespace: gateway
    sectionName: http
  hostnames:
  - rundeck.itruslan.ru
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rundeck
  namespace: rundeck
  annotations:
    external-dns.alpha.kubernetes.io/hostname: rundeck.itruslan.ru
spec:
  parentRefs:
  - name: homelab
    namespace: gateway
    sectionName: https
  hostnames:
  - rundeck.itruslan.ru
  rules:
  - backendRefs:
    - name: rundeck
      port: 4440
